Design issue/Delete Account/Delete account confirmation message: The warning-icon is shifted up ,not on the same linw with the warining text

--- a/lms/static/sass/pages/_account-settings.scss
+++ b/lms/static/sass/pages/_account-settings.scss
@@ -136,6 +136,7 @@
 				.modal-alert .alert-content .alert-title {
 					font-size: calcRem(16);
 					margin-bottom: calcRem(20);
+					margin-top: 0;
 				}
 
 				.paragon__modal-footer {
